--- a/TODO
+++ b/TODO
@@ -8,5 +8,12 @@
 - Svelte
 - Astro... は後で?
 
+    "eslint-config-next": "^14.2.3",
+    "eslint-plugin-import-x": "^3.0.1",
+    "eslint-import-resolver-typescript": "^3.6.1",
+    "eslint-plugin-react": "^7.34.1",
+    "eslint-plugin-react-hooks": "^4.6.2",
+
+
 2. ファイル構造再構成
 共通のは共通のでまとめる。そこから更に JSDoc とか Vitest とか細分化?
